feat: misc clean up to pages and fix formatting

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
-# Introduction
+# Karl's Documentation
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+This site will be used for a sort of one-stop shop for my learning as I test try to iron out and find the best development practices.
 
 ## What is Nextra?
 
@@ -9,3 +9,5 @@ A **simple**, **powerful** and **flexible** site generation framework with every
 ## Documentation
 
 The documentation is available at [https://nextra.site](https://nextra.site).
+
+##
