--- a/pages/styling/tailwindcss.mdx
+++ b/pages/styling/tailwindcss.mdx
@@ -1,9 +1,4 @@
 # Tailwind CSS
 
-## Component Testing
-
-```js filename="demo.js" {3} copy
-let a = 1;
-
-console.log(a);
-```
+## Why use Tailwind?
+It provides reusable styling and components that I can use between multiple websites. Combining CSS best practices with Tailwind helps supress all the 
