refactor: add pages and housekeeping

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,7 @@
 # Karl's Documentation
  
 This site will be used for a sort of one-stop shop for my learning as I test try to iron out and find the best development practices.
+A way to organize my thoughts and my mental model of my understanding of how things work.
 
 ## What is Nextra?
 
