--- a/pages/styling/css.mdx
+++ b/pages/styling/css.mdx
@@ -7,16 +7,22 @@ I typically brushed over the CSS, because I was in such a rush to learn React at
 
 No need to worry about learning values and properties by heart. Lots of resources out there to look up such as mdn docs.
 
-
-## The Box Model
-CSS layout is based on the box model. Properties include margin, border, padding, content
-
-## Display Value Types
+## Basics: Flexbox vs Grid
 
 
 
-## Selectors
+[Flexbox Reference - CSS Tricks](https://css-tricks.com/snippets/css/a-guide-to-flexbox/)
 
-Selectors, select some part of your document in order to apply CSS rules.
+[Grid Reference - CSS Tricks](https://css-tricks.com/snippets/css/a-guide-to-flexbox/)
 
-[CSS Selectors MDN Reference](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors)
+### How to utilize both
+
+Grid is a newer than Flexbox and has less browser support, but it not a complete replacement to Flexbox, and should be used in junction with Flexbox.
+
+- Grid can make whole page layouts
+- Make literal grids
+- Require less media query intervention
+
+Flexbox is for laying out items in a single dimension in a row OR column. Grid is for layout of items in two dimensions row AND column
+
+[Utilizing Both - CSS Tricks](https://css-tricks.com/css-grid-replace-flexbox/)
