feat: add jsx, prop and state pages

--- a/pages/react/jsx.mdx
+++ b/pages/react/jsx.mdx
@@ -15,3 +15,11 @@ Thus making it safer to change either of them on their own.
 
 
 [React Docs - Writing Markup with JSX](https://beta.reactjs.org/learn/writing-markup-with-jsx)
+
+## JSX Relation to React.createElement
+[React Docs - React without JSX](https://reactjs.org/docs/react-without-jsx.html)
+
+[React Docs - createElement](https://beta.reactjs.org/reference/react/createElement)
+
+Essentially just syntaxic sugar, for calling the React.createElement function, anything writen in jsx
+can be translated to plain JavaScript
