feat: add fullstack and props, organize

--- a/pages/react/props.mdx
+++ b/pages/react/props.mdx
@@ -1,5 +1,17 @@
 # Props
 
-## Passing Props to a Component
+## Passing Data to a Component
+
+Passing data to components is possible with props
+
+```js copy
+const Hello = (props) => {
+    return (
+        <div>
+            <p>Hello {props.name}</p>
+        </div>
+    )
+}
+```
 
 ## Prop Drilling
