feat: added and updated pages

--- a/pages/blender/chess.mdx
+++ b/pages/blender/chess.mdx
@@ -43,3 +43,7 @@ Vertice Selection (E) then x?
 
 Edit Mode is done by pressing Tab key
 
+Grabbing an object
+- g and then the axis you want to move
+
+To go in to edit modegggggggg
