feat: fullstack update

--- a/pages/react/fullstackreact.mdx
+++ b/pages/react/fullstackreact.mdx
@@ -451,3 +451,12 @@ const App = () => {
   )
 }
 ```
+### Update of the state is asynchronous
+
+State updates in React asynchronously, not immediately but at some point, before the component is rendered again.
+
+### Conditional Rendering
+
+Go over example more covered in part 2
+
+### Deubgging React Applications
